<resources>
    <string name="accounts">Accounts</string>
    <string name="blotter">Blotter</string>
    <string name="currencies">Currencies</string>
    <string name="categories">Categories</string>
    <string name="budgets">Budgets</string>
    <string name="projects">Projects</string>
    <string name="ok">OK</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="edit_account">Edit Account</string>
    <string name="add_account">Add account</string>
    <string name="title">Title</string>
    <string name="payee">Payee</string>
    <string name="currency">Currency</string>
    <string name="add_currency">Add Currency</string>
    <string name="opening_amount">Opening amount</string>
    <string name="limit_amount">Limit amount</string>
	<string name="amount_in" formatted="false">Amount in &lt;b&gt;%s %s&lt;/b&gt;</string>
	<string name="view">View</string>
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>
	<string name="add_transaction">Add Transaction</string>
	<string name="account">Account</string>
	<string name="category">Category</string>
	<string name="add_category">Add Category</string>
	<string name="income">Income</string>
	<string name="expense">Expense</string>
	<string name="amount">Amount</string>
	<string name="date">Date</string>
	<string name="time">Time</string>
	<string name="parent">Parent</string>
	<string name="total">Total:</string>
	<string name="filter">Filter</string>
	<string name="no_filter">No filter</string>
	<string name="transfer">Transfer</string>
	<string name="confirmation">Confirmation</string>
	<string name="delete_category_dialog">Delete the category and all sub-categories (if any)?</string>
	<string name="currency_delete_alert">Can\'t delete the currency which is in use..</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="error">Error</string>
	<string name="include_subcategories">Include sub-categories</string>
	<string name="include_subcategories_summary">Add transactions from sub-categories</string>
	<string name="start_date">Start date</string>
	<string name="end_date">End date</string>
	<string name="budget">Budget</string>
	<string name="no_limit">No limit</string>
	<string name="period">Period</string>
	<string name="period_from">Period From</string>
	<string name="period_to">Period To</string>
	<string name="period_recur">Period Recur</string>
	<string name="preferences">Preferences</string>
	<string name="amount_picker">Amount Picker</string>
	<string name="integer_part_title">Number of digits</string>
	<string name="use_hundredth_title">Use hundredths</string>
	<string name="project">Project</string>
	<string name="select_account">Please select account..</string>
	<string name="select_currency">Please select currency..</string>
	<string name="select_category">Please select category..</string>
	<string name="select_project">Please select project..</string>
	<string name="warning">Warning</string>
	<string name="no_mileages">Mileage consists of a recorded start and stop time, odometer and fuel level. You want to create ont every time starting a trip. "Close" it when You\'ve arrived to the destination. Press "Menu" button then select "Add".</string>
	<string name="no_heartbeats">Heartbeat is a special type of record, holding basic counters of Your car. Normaly it gets created simultaneously when entering other types of records like Refuel or Mileage. Also, You are welcome to create heartbeats as frequent as possible, this way You can greatly increase usage statistics accuracy. Press "Menu" button then select "Add".</string>
	<string name="no_refuels">You want to enter a new Refuel record each time after visiting fuel pump. Press "Menu" button then select "Add".</string>
	<string name="amount_from">Amount Out</string>
	<string name="amount_to">Amount In</string>
	<string name="rate">Rate</string>
	<string name="no_rate">No rate</string>
	<string name="transaction">Transaction</string>
	<string name="transaction_title">New Transaction</string>
	<string name="transfer_title">New Transfer</string>
	<string name="about">About</string>
	<string name="about_copyright2">All rights reserved</string>
	<string name="menu">Menu</string>
	<string name="location">Location</string>
	<string name="track">Track</string>
	<string name="locations">Locations</string>
	<string name="tracks">Tracks</string>
	<string name="no_track"><i>Select existing track</i></string>
	<string name="no_locations">No locations</string>
	<string name="use_gps">Use GPS</string>
	<string name="use_gps_summary">Use GPS to get current location for transaction</string>
	<string name="use_my_location">Use My Location</string>
	<string name="use_my_location_summary">Use My Location to get current location for a new location</string>
	<string name="select_location">Select location</string>
	<string name="no_fix">Unknown location</string>
	<string name="attribute">Attribute</string>
	<string name="attributes">Attributes</string>
	<string name="parent_attributes">Parent attributes</string>
	<string name="change_attributes">Change attributes</string>
	<string name="calculator">Calculator</string>
	<string name="no_attributes">No attributes</string>
	<string name="add_attribute">Add attribute</string>
	<string name="new_attribute">New attribute</string>
	<string-array name="attribute_types">
		<item>Text</item>
		<item>Number</item>
		<item>List</item>
		<item>Checkbox</item>
	</string-array>
	<string name="attribute_type">Type</string>
	<string name="attribute_name">Name</string>
	<string name="attribute_values">Values</string>
	<string name="attribute_values_hint">Use ; to separate values</string>
	<string name="attribute_default_value">Default value</string>
	<string name="checkbox_values">Yes/No</string>
	<string name="checkbox_values_yes">Yes</string>
	<string name="checkbox_values_no">No</string>
	<string name="checkbox_values_hint">Yes;No</string>
	<string name="location_name">Location name</string>
	<string name="satellite_on">Satellite On</string>
	<string name="satellite_off">Satellite Off</string>
	<string name="my_location">My location</string>
	<string name="move_marker_to_center">Marker to center</string>
	<string name="move_go_to_marker">Go to marker</string>
	<string name="tap_location">Tap \'My location\' marker to manually adjust location</string>
	<string name="note">Note</string>
	<string name="service_is_not_available">Service is not available, please try again later</string>
	<string name="resolve_address">Resolve address</string>
	<string name="resolving_address">Resolving address..</string>
	<string name="report">Report</string>
	<string name="reports">Reports</string>
	<string name="no_reports">No reports</string>
	<string name="select_report">Please select report..</string>
	<string name="overall">Overall</string>
	<string name="report_by_period">By Period</string>
	<string name="report_by_period_summary">Transactions report by period</string>
	<string name="report_by_category">By Category</string>
	<string name="report_by_category_summary">Transactions report by category</string>
	<string name="report_by_location">By Location</string>
	<string name="report_by_location_summary">Transactions report by location</string>
	<string name="report_by_project">By Project</string>
	<string name="report_by_project_summary">Transactions report by project</string>
	<string name="report_by_account_by_period">By Account / Period</string>
	<string name="report_by_account_by_period_summary">Transactions report by account and period</string>
	<string name="report_by_category_by_period">By Category / Period</string>
	<string name="report_by_category_by_period_summary">Transactions report by category and period</string>
	<string name="report_by_location_by_period">By Location / Period</string>
	<string name="report_by_location_by_period_summary">Transactions report by location and period</string>
	<string name="report_by_project_by_period">By Project / Period</string>
	<string name="report_by_project_by_period_summary">Transactions report by project and period</string>
	<string-array name="report_types">
		<item>By Period</item>
		<item>By Category</item>		
		<item>By Location</item>
		<item>By Project</item>
		<item>By Account/Period</item>
		<item>By Category/Period</item>
		<item>By Location/Period</item>
		<item>By Project/Period</item>
	</string-array>
	<string name="max_result_label">Max:</string>
	<string name="min_result_label">Min:</string>
	<string name="mean_result_label">Mean:</string>
	<string name="sum_result_label">Sum:</string>
	<string name="report_init_res">0</string>
	<string name="no_data_to_report">No data available to display the report.</string>
	<string name="report_preferences_not_set">Adjust preferences on Report Preferences menu. Considering default currency and period.</string>
	<string name="currency_not_set">Reference Currency not set on Preferences. Considering default currency.</string>
	<string name="period_not_set">Period of Reference not set on Preferences. Considering default period.</string>
	<string name="report_no_category">There is no category available for filtering in the report.</string>
	<string name="report_no_project">There is no project available for filtering in the report.</string>
	<string name="report_no_account">There is no account available for filtering in the report.</string>
	<string name="report_no_location">There is no location available for filtering in the report.</string>
	<string name="no_account">No account</string>
	<string name="period_today">Today</string>
	<string name="period_yesterday">Yesterday</string>
	<string name="period_this_week">This week</string>
	<string name="period_this_month">This month</string>
	<string name="period_last_week">Last week</string>
	<string name="period_last_month">Last month</string>
	<string-array name="datetime_filter_items">
		<item>Today</item>
		<item>Yesterday</item>
		<item>This week</item>		
		<item>This month</item>
		<item>Last week</item>
		<item>Last month</item>
		<item>Custom</item>
	</string-array>
    <string name="currency_name">Name</string>
    <string name="currency_symbol">Symbol</string>
	<string name="currency_code">Code</string>
	<string name="currency_code_hint">ISO 4217 code</string>
	<string name="is_default">Is default</string>
	<string name="is_included_into_totals">Include into totals</string>
	<string name="is_included_into_totals_summary">Include transactions from this account into totals</string>
	<string name="decimals">\nDecimals</string>
	<string name="decimal_separator">Decimal\nseparator</string>
	<string name="group_separator">Group\nseparator</string>
	<string name="field_separator">Field\nseparator</string>
	<string name="include_header">Include\nheader</string>
	<string name="delete_mileage_confirm">Delete mileage?</string>
	<string name="delete_heartbeat_confirm">Delete heartbeat?</string>
	<string name="delete_refuel_confirm">Delete refuel?</string>
	<string name="delete_budget_recurring_select">You\'re about to delete a recurring budget. What to delete?</string>
	<string name="delete_budget_one_entry">This entry</string>
	<string name="delete_budget_all_entries">All entries</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="item_add">Add</string>
    <string name="fuel_input_label"><b>Fuel</b>, <i>litres</i></string>
    <string name="location_input_label"><b>Location</b></string>
    <string name="odometer_input_label"><b>Odometer</b>, <i>km</i></string>
    <string name="refuel_amount_input_label"><b>Amount</b>, <i>litres</i></string>
    <string name="refuel_price_input_label"><b>Unit price</b>, <i>uah</i></string>
    <string name="refuel_cost_input_label"><b>Total cost</b>, <i>uah</i></string>
    <string name="refuels">Refuels</string>
</resources>