<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android			="http://schemas.android.com/apk/res/android"
	android:layout_width	="wrap_content"
	
	android:layout_height="64dp"
	android:paddingRight	="12dp">
	
	<TextView
		android:id="@+id/indicator"
		android:background="@color/sync_unknown"
		android:layout_alignParentLeft="true"
		android:layout_height="fill_parent"
		android:layout_width="3dp"
		android:layout_marginBottom="3dp"
		android:layout_marginTop="3dp"/>
	
	<TextView android:id		="@+id/date"
		android:layout_width	="wrap_content"
		android:layout_height	="wrap_content"
		android:layout_alignParentTop="true"
		android:singleLine		="true"
		android:layout_toRightOf="@id/indicator"
		android:paddingLeft		="10dp"
		android:text			="2011-03-21 09:01"
		android:paddingTop		="2dp" />
	
	<ImageView android:id	="@+id/icon_refuel"
		style="@style/HeartbeatTypeIcon"
		android:contentDescription="@string/refuels"
		android:src	="@drawable/hb_refuel" />
	
	<ImageView android:id	="@+id/icon_stop"
		style="@style/HeartbeatTypeIcon"
		android:contentDescription="@string/stop"
		android:src	="@drawable/hb_stop" />
	
	<ImageView android:id	="@+id/icon_start"
		style="@style/HeartbeatTypeIcon"
		android:contentDescription="@string/start"
		android:src	="@drawable/hb_start" />
	
	<ProgressBar android:id		="@+id/fuelGauge"
		android:max				="60"
		android:layout_width	="fill_parent"
		android:progress		="40"
		android:paddingBottom	="4dp"
		android:paddingLeft		="10dp"
		android:layout_height	="12dp"
		style					="@style/ProgressBarFuel"
		android:layout_toRightOf="@id/indicator"
		android:layout_alignParentBottom="true" />
		
	<TextView android:id		="@+id/odometer"
		android:text			="39881"
		android:textAppearance	="?android:attr/textAppearanceLarge"
		android:paddingLeft		="10dp"
		android:gravity			="bottom"
		android:layout_above	="@id/fuelGauge"
		android:layout_below	="@id/date"
		android:layout_toRightOf="@id/indicator"
		android:layout_marginRight	="3dip"
		android:layout_height	="wrap_content"
		android:layout_width	="wrap_content"/>
	
	<TextView android:id		="@+id/fuelUOM"
		android:gravity			="center_vertical"
		android:layout_width	="wrap_content"
		android:layout_height	="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_above	="@id/fuelGauge"
		android:textAppearance	="?android:attr/textAppearanceLarge"
		android:textColor		="#ccc"
		android:text			="L"/>
	
	<TextView android:id		="@+id/fuelAmt"
		android:gravity			="center_vertical"
		android:layout_marginLeft	="5dip"
		android:layout_marginRight	="3dip"
		android:layout_width	="wrap_content"
		android:layout_height	="wrap_content"
		android:layout_above	="@id/fuelGauge"
		android:layout_toLeftOf	="@id/fuelUOM"
		android:textAppearance	="?android:attr/textAppearanceLarge"
		android:singleLine		="true"
		android:text			="25.4"
		android:textColor		="@color/neutral_amount"/>
	
	<TextView android:id="@+id/place"
		style				="@style/LocationText"
		android:gravity			="bottom"
		android:layout_above	="@id/fuelGauge"
		android:layout_toLeftOf	="@id/fuelAmt"
		android:layout_toRightOf="@id/odometer" />
</RelativeLayout>