<!--
  Copyright (c) 2010 Denis Solonenko.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v2.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
  
  Contributors:
      Denis Solonenko - initial API and implementation
	
	2011-02-27: Adapted for Wheelly by esteewhy.
-->
<LinearLayout
	xmlns:android			="http://schemas.android.com/apk/res/android"
	xmlns:wheelly			="http://schemas.android.com/apk/res/com.wheelly"
	android:layout_width	="fill_parent"
	android:layout_height	="fill_parent"
	android:orientation		="vertical">
	
	<ScrollView
		android:layout_width	="fill_parent"
		android:layout_height	="wrap_content"
		android:layout_weight	="1"
		android:scrollbarStyle	="outsideInset">
		
		<LinearLayout
			xmlns:android			="http://schemas.android.com/apk/res/android"
			android:layout_width	="fill_parent"
			android:layout_height	="fill_parent"
			android:orientation		="vertical"
			android:id				="@+id/list">
			
			<fragment
				class		="com.wheelly.app.HeartbeatInput"
				android:id	="@+id/heartbeat"
				android:layout_height	="wrap_content"
				android:layout_width	="fill_parent" /> 
			
			<include
				layout		="@layout/edit_divider" />
			
			<com.wheelly.widget.LabeledLayout
				android:layout_width	="fill_parent"
				android:layout_height	="wrap_content"
				wheelly:label			="Sync transaction">
				<fragment
					class		="com.wheelly.widget.FinancistoButton"
					android:id	="@+id/financisto"
					android:layout_height	="wrap_content"
					android:layout_width	="fill_parent" />
			</com.wheelly.widget.LabeledLayout>
			
			<include
				layout		="@layout/edit_divider" />
			
			<com.wheelly.widget.LabeledLayout
				android:layout_width	="fill_parent"
				android:layout_height	="wrap_content"
				wheelly:label			="@string/refuel_amount_input_label">
				<fragment
					class		="ru.orangesoftware.financisto.widget.AmountInput"
					android:id	="@+id/amount"
					android:layout_height	="wrap_content"
					android:layout_width	="fill_parent" />
			</com.wheelly.widget.LabeledLayout>
			
			<include
				layout		="@layout/edit_divider" />
				
			<com.wheelly.widget.LabeledLayout
				android:layout_width	="fill_parent"
				android:layout_height	="wrap_content"
				wheelly:label			="@string/refuel_price_input_label">
				<fragment
					class		="ru.orangesoftware.financisto.widget.AmountInput"
					android:id	="@+id/price"
					android:layout_height	="wrap_content"
					android:layout_width	="fill_parent" />
			</com.wheelly.widget.LabeledLayout>
			
			<include
				layout		="@layout/edit_divider" />
				
			<com.wheelly.widget.LabeledLayout
				android:layout_width	="fill_parent"
				android:layout_height	="wrap_content"
				wheelly:label			="@string/refuel_cost_input_label">
				<fragment
					class		="ru.orangesoftware.financisto.widget.AmountInput"
					android:id	="@+id/cost"
					android:layout_height	="wrap_content"
					android:layout_width	="fill_parent" />
			</com.wheelly.widget.LabeledLayout>
		</LinearLayout>
	</ScrollView>
	
	<include layout="@layout/save_and_new_buttons" />
	
</LinearLayout>	
